k3s/applications/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: qbittorrent
  labels:
    app.kubernetes.io/name: qbittorrent
spec:
  type: ClusterIP
  selector:
    app: qbittorrent
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: qbt-metrics
      port: 9090
      targetPort: 9090
      protocol: TCP
    - name: gluetun-metrics
      port: 9586
      targetPort: 9586
      protocol: TCP
